release:fixing start button z-index

--- a/frontends/landing/blue-box/BlueBox.module.scss
+++ b/frontends/landing/blue-box/BlueBox.module.scss
@@ -62,6 +62,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    z-index: 2;
 
     .up-right-icon {
         display: flex;
